0.3.0.dev2/_sources/content/advanced_tutorials/manager_env_vars.rst.txt
.. _manager-env-vars-reference:

Manager Environment Variables
=============================

+----------------------------------------+-----------------------+--------------------------------------------------------+
| Environment Variable                   | Default Value         | Description                                            |
+========================================+=======================+========================================================+
| MVI_HOST_NAME                          | "localhost"           | Host name of the machine running the manager.          |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_PROXY_HTTP_PORT                    | 80                    | Proxy port for HTTP communication with manager.        |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_PROXY_HTTPS_PORT                   | 443                   | Proxy port for HTTP communication with manager.        |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_PROXY_CONFIG_PATH                  | "proxy_config"        | Path to proxy configuration files.                     |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_AUTH_ENABLED                       | False                 | Using the manager required login if true.              |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_MAX_REQUEST_BODY                   | 1000000000            | Maximum allowed transferred filesize. 1GB default.     |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_LOG_LEVEL                          | "INFO"                | Minimum logger level for manager.                      |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_ACCESS_LOGS_ENABLED                | True                  | Whether to print access logs.                          |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_NOTIFICATION_SENDER_EMAIL          | null                  | Email address for notification sender.                 |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_NOTIFICATION_SENDER_EMAIL_PASSWORD | null                  | Password for notification sender email.                |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_NOTIFICATION_SMTP_SERVER           | null                  | SMTP server URL.                                       |
+----------------------------------------+-----------------------+--------------------------------------------------------+
| MVI_NOTIFICATION_SMTP_PORT             | null                  | Port to SMTP server, usually 587 or 465.               |
+----------------------------------------+-----------------------+--------------------------------------------------------+